<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_augment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.augment.acmeshop.activities.AugmentActivity">

    <fragment
        android:id="@+id/augment_player_fragment"
        android:name="com.ar.augment.arplayer.sdk.AugmentPlayerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/helpButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#88FFFFFF"
            android:onClick="onClick"
            android:text="@string/help_action"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <ImageButton
                android:id="@+id/screenshotButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/screenshot_action"
                android:onClick="onClick"
                android:src="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/centerAction"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:onClick="onClick"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/center_action"
                android:textColor="@color/colorBackground" />
        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/loadingContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/colorBackground"
        android:padding="20dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:indeterminateTintMode="src_in"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:text="@string/loading_"
            android:textColor="@color/colorForeground"
            android:textStyle="normal|bold" />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:id="@+id/tutorialContainer"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorBackground"-->
        <!--android:orientation="vertical">-->

        <!--<androidx.viewpager.widget.ViewPager-->
            <!--android:id="@+id/viewpager"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" />-->

        <!--<Button-->
            <!--android:id="@+id/iGotItButton"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:onClick="onClick"-->
            <!--android:text="@string/i_got_it_action"-->
            <!--android:textColor="@color/colorBackground"-->
            <!--android:visibility="gone" />-->

        <!--<TextView-->
            <!--android:id="@+id/pagerTextView"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/step_1_4"-->
            <!--android:textSize="18sp" />-->

    <!--</LinearLayout>-->

</RelativeLayout>
